fixed white stripes on mobile devices

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -44,16 +44,33 @@
   );
 }
 body {
-  background-image: var(--theme-current-bg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top left;
-  background-attachment: fixed;
   color: #dfe2df;
+  position: relative;
 
   scrollbar-width: thin;
   scrollbar-color: var(--theme-current-header-bg) var(--theme-current-page);
 }
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120%;
+
+  background-image: var(--theme-current-bg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-attachment: scroll;
+  z-index: -1;
+}
+@media (max-width: 1024px) {
+  body::before {
+    height: calc(100% + 120px);
+  }
+}
+
 body::-webkit-scrollbar {
   width: 10px;
 }
