--- a/src/components/Layout/header/Overlay/Overlay.scss.module.scss
+++ b/src/components/Layout/header/Overlay/Overlay.scss.module.scss
@@ -1,9 +1,9 @@
 .overlay {
   position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
+  width: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 2;
   opacity: 0;
@@ -13,5 +13,9 @@
   &--show {
     opacity: 1;
     visibility: visible;
+  }
+
+  @media (pointer: coarse) {
+    height: calc(100vh + 60px);
   }
 }
